remove redundant content

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CrossConfirmation</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <title>招商银行招赢通</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
